# CPP_PRSI

./: Button.cpp  Button.h  CMakeLists.txt  CPP_PRSI.sln  Card.cpp  Card.h  CardSprite.cpp  CardSprite.h  Click.cpp  Click.h  ColorNumber.cpp  ColorNumber.h  ColorSprite.cpp  ColorSprite.h  ComputerPlayer.cpp  ComputerPlayer.h  Deck.cpp  Deck.h  GameManager.cpp  GameManager.h  GameMenu.cpp  GameMenu.h  GameMenuDto.h  GameStateData.h  GraphicsHelper.cpp  GraphicsHelper.h  Helper.cpp  Helper.h  HumanPlayer.cpp  HumanPlayer.h  Opener.cpp  Opener.h  Player.cpp  Player.h  README.md  Tests.h  main.cpp
CPP_PRSI/: Button.cpp  Button.h  CPP_PRSI.vcxproj  CPP_PRSI.vcxproj.filters  Card.h  CardFunctionColor.h  CardFunctionNumber.h  CardSprite.cpp  CardSprite.h  Click.cpp  Click.h  ColorSprite.cpp  ColorSprite.h  ComputerPlayer.cpp  ComputerPlayer.h  Deck.cpp  Deck.h  GameManager.cpp  GameManager.h  GameMenu.cpp  GameMenu.h  GraphicsHelper.cpp  GraphicsHelper.h  Helper.h  HumanPlayer.cpp  HumanPlayer.h  Menu.cpp  Opener.cpp  Opener.h  Player.cpp  Player.h  main.cpp
SFML-2.5.1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  SFML.sln  SFMLSharedTargets.cmake  cmake_install.cmake
SFML-2.5.1/src/SFML/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
SFML-2.5.1/src/SFML/Audio/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-audio.vcxproj  sfml-audio.vcxproj.filters
SFML-2.5.1/src/SFML/Graphics/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  sfml-graphics.vcxproj  (+1 more)
(+20 files in other folders)
